M - Я, как пользователь, хочу иметь теги товаров. - Добавлены таблицы: tag, product_tag. - Добавлен функционал получения данных из таблицы tag. - Добавлена ER-модель в admin-guide. - Добавление конфигурации для ObjectMapper. - Добавление обработки NoResourceFoundException и HttpRequestMethodNotSupportedException исключений. - Корректировка конфигурации subproject основного модуля: отключение bootJar-таски, включение jar-таски. - Корректировка openapi, admin-guide. - Добавлены API-тесты.
